martian-filetypes/tests/ui/invalid_type_write.stderr
error[E0308]: mismatched types
  --> $DIR/invalid_type_write.rs:27:25
   |
27 |         feat_file.write(&creature)?; // This is a compiler error
   |                         ^^^^^^^^^ expected struct `Feature`, found struct `Creature`
   |
   = note: expected reference `&Feature`
              found reference `&Creature`

error[E0308]: mismatched types
  --> $DIR/invalid_type_write.rs:32:25
   |
32 |         feat_file.write(&creature)?; // This is a compiler error
   |                         ^^^^^^^^^ expected struct `Feature`, found struct `Creature`
   |
   = note: expected reference `&Feature`
              found reference `&Creature`
